# python-dependency-demo

./: Dockerfile  Pipfile  README.md  app.py  environment.yml  pyproject.toml  requirements.in  requirements.txt  test_app.py
