[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Ida Norderhaug Drøsdal <ida.norderhaug.drosdal@ngi.no>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
